# xpectate

./: .gitignore  Cargo.toml  global.css  main.py  pyproject.toml
example/: index.html  package.json  tailwind.config.js
src/: lib.rs
