[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "xpectate"
version = "0.1.0"
authors = [
    {email = "fabian.rodrez@gmail.com"},
    {name = "Fabian Rodriguez"},
]
description = "A boosted file watching library"
license = "MIT"
dependencies = ["maturin"]

[tool.poetry]
name = 'xpecate'
version = "0.1.0"
authors = [
    "devmask@gmail.com"
]
description = "A boosted file watching library"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.3.0"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]